# spec-patcher

./: .gitignore  Cargo.toml  TODO  myfile.json  test.json
object_def/: Cargo.toml  README.md
object_def/.openapi-generator/: FILES
object_def/docs/: DefaultApi.md  ObjectAction.md  ObjectActionApi.md  ObjectDefinition.md  ObjectDefinitionApi.md  ObjectField.md  ObjectFieldApi.md  ObjectFolder.md  ObjectFolderApi.md  ObjectFolderItem.md  ObjectLayoutApi.md  ObjectRelationship.md  ObjectRelationshipApi.md  ObjectValidationRule.md  ObjectValidationRuleApi.md  ObjectValidationRuleSetting.md  ObjectViewApi.md  PageObjectAction.md  PageObjectDefinition.md  PageObjectField.md  PageObjectFolder.md  PageObjectLayout.md  PageObjectRelationship.md  PageObjectValidationRule.md  PageObjectView.md
object_def/src/apis/: configuration.rs  default_api.rs  mod.rs  object_action_api.rs  object_definition_api.rs  object_field_api.rs  object_folder_api.rs  object_layout_api.rs  object_relationship_api.rs  object_validation_rule_api.rs  object_view_api.rs
object_def/src/models/: facet.rs  facet_value.rs  mod.rs  object_action.rs  object_definition.rs  object_field.rs  object_field_setting.rs  object_folder.rs  object_folder_item.rs  object_layout.rs  object_layout_box.rs  object_layout_column.rs  object_layout_row.rs  object_layout_tab.rs  object_relationship.rs  object_validation_rule.rs  object_validation_rule_setting.rs  object_view.rs  object_view_column.rs  object_view_filter_column.rs  object_view_sort_column.rs  page_object_action.rs  page_object_definition.rs  page_object_field.rs  page_object_folder.rs  page_object_layout.rs  page_object_relationship.rs  page_object_validation_rule.rs  page_object_view.rs  status.rs
picklist/: Cargo.toml  README.md
picklist/docs/: DefaultApi.md  ListTypeDefinition.md  ListTypeDefinitionApi.md  ListTypeEntry.md  ListTypeEntryApi.md  PageListTypeDefinition.md  PageListTypeEntry.md
src/: error.rs  lib.rs  main.rs
src/config/: error.rs  file.rs  mod.rs
src/load/: client.rs  error.rs  format.rs  mod.rs
src/object/: extract.rs
src/output/: error.rs  mod.rs
src/patch/: error.rs  format.rs  mod.rs  object.rs  patch_checklist.md  picklist.rs  relation.rs
src/schema/: extract.rs  mod.rs  visitor.rs  walker.rs
static/: list-type.json  object-def.json
(+19 files in other folders)
